# bummer

./: .gitignore  Cargo.toml  README.md
examples/minimal-macroquad/: Cargo.toml  README.md  bummer.toml
examples/minimal-macroquad/src/: main.rs  multiplayer.rs
examples/minimal-server/: Cargo.toml
examples/minimal-server/src/: main.rs
src/: lib.rs  main.rs  settings.rs  util.rs
src/http/: data.rs  mod.rs  routes.rs  server.rs
src/udp/: actions.rs  client.rs  data.rs  guillotine.rs  messages.rs  mod.rs  server.rs
