[package]
name = "minimal-macroquad"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
bummer = { path = "../.." }
reqwest = { version = "0.12.22", features = [ "blocking" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
clap = { version = "4.5.41", features = ["derive"] }
